# Air

./: .gitignore  CMakeLists.txt  License.md  README.md
EngineSrc/: main.cpp
EngineSrc/Application/: Keys.cpp  Keys.h  Window.cpp  Window.h
EngineSrc/Foundation/: Array.cpp  Array.h  Assert.h  Bit.cpp  Bit.h  Blob.h  BlobSerialisation.cpp  BlobSerialisation.h  Camera.cpp  Camera.h  Colour.cpp  Colour.h  DataStructures.cpp  DataStructures.h  File.cpp  File.h  Gltf.cpp  Gltf.h  HashMap.cpp  HashMap.h  Log.cpp  Log.h  Memory.cpp  Memory.h  Numerics.cpp  Numerics.h  Platform.h  Process.cpp  Process.h  RelativeDataStructures.cpp  RelativeDataStructures.h  ResourceManager.cpp  ResourceManager.h  Service.h  ServiceManager.cpp  ServiceManager.h  String.cpp  String.h  Time.cpp  Time.h
